# rust-lcm-codec

./: Cargo.toml  README.md
rust-lcm-codegen/src/: lib.rs
tests/: multidimensional.rs
tests/schemas/: multidimensional.lcm
